login/static/css/style.css
@import url('https://fonts.googleapis.com/css?family=Montserrat:400,800');

* {
	box-sizing: border-box;
}

body {
	display: flex;
	justify-content: center;
	align-items: center;
	flex-direction: column;
	font-family: 'Montserrat', sans-serif;
	height: 100vh;
}

h1 {
	font-weight: bold;
	margin: 0;
	color:#222;
}

h2 {
	text-align: center;
}

h3 {
	text-align: center;
	margin:10px;
	padding: 5px;
	font-size: 14px
}

p {
	font-size: 14px;
	font-weight: 100;
	line-height: 20px;
	letter-spacing: 0.5px;
	margin: 20pxFED99B 0 30px;
}

span {
	font-size: 30px;
} 

a {
	color: #333;
	font-size: 14px;
	text-decoration: none;
	margin: 15px 0;
}

button {
	border-radius: 20px;
	border: 1px solid #FED18C;
	background-color: #ffb20f;
	color: #FFFFFF;
	font-size: 12px;
	font-weight: bold;
	padding: 12px 45px;
	letter-spacing: 1px;
	text-transform: uppercase;
	transition: transform 80ms ease-in;
	cursor:pointer;
}


button:active {
	transform: scale(0.95);
}

button:focus {
	outline: none;
}

button.ghost {
	background-color: transparent;
	border-color: #FFFFFF;
}

form {
	background-color: #FFFFFF;
	display: flex;
	align-items: center;
	justify-content: center;
	flex-direction: column;
	padding: 0 50px;
	height: 100%;
	text-align: center;
}

input {
	background-color: #eee;
	border: none;
	padding: 12px 15px;
	margin: 8px 0;
	width: 100%;
}

.container {
	background-color: #fff;
	border-radius: 10px;
  	box-shadow: 0 14px 28px rgba(0,0,0,0.25), 
			0 10px 10px rgba(0,0,0,0.22);
	position: relative;
	overflow: auto;
	width: 55%;
	max-width: 100%;
	min-height: 75%;
	/* max-height: 75%; */
	color:#222;
}

.form-container {
	position: absolute;
	top: 0%;
	height: 100%;
	transition: all 0.6s ease-in-out;

}

.sign-in-container {
	height: 100%;
	left: 0;
	width: 50%;
	z-index: 2;
}

.container.right-panel-active .sign-in-container {
	transform: translateX(100%);
}

.sign-up-container {
	height: 100%;
	left: 0;
	width: 50%;
	opacity: 0;
	z-index: 1;
}



.container.right-panel-active .sign-up-container {
	transform: translateX(100%);
	opacity: 1;
	z-index: 5;
	animation: show 0.6s;
}

@keyframes show {
	0%, 49.99% {
		opacity: 0;
		z-index: 1;
	}
	
	50%, 100% {
		opacity: 1;
		z-index: 5;
	}
}

.overlay-container {
	position: absolute;
	top: 0;
	left: 50%;
	width: 50%;
	height: 100%;
	/* height: 90%; */
	overflow: hidden;
	transition: transform 0.6s ease-in-out;
	z-index: 100;
}

.container.right-panel-active .overlay-container{
	transform: translateX(-100%);
}

.overlay {
	background: #fe654f;
	background: -webkit-linear-gradient(to right, #FED18C, #fe654f);
	background: linear-gradient(to right, #FED18C, #fe654f);
	background-repeat: no-repeat;
	background-size: cover;
	background-position: 0 0;
	color: #FFFFFF;
	position: relative;
	left: -100%;
	height: 100%;
	width: 200%;
  	transform: translateX(0);
	transition: transform 0.6s ease-in-out;
}

.container.right-panel-active .overlay {
  	transform: translateX(50%);
}

.overlay-panel {
	position: absolute;
	display: flex;
	align-items: center;
	justify-content: center;
	flex-direction: column;
	padding: 0 40px;
	text-align: center;
	top: 0;
	height: 100%;
	width: 50%;
	transform: translateX(0);
	transition: transform 0.6s ease-in-out;
}

.overlay-left {
	transform: translateX(-20%);
}

.container.right-panel-active .overlay-left {
	transform: translateX(0);
}

.overlay-right {
	right: 0;
	transform: translateX(0);

	overflow-y: auto;
}

.container.right-panel-active .overlay-right {
	transform: translateX(20%);

	overflow-y: auto;
}

.social-container {
	margin: 20px 0;
}

.social-container a {
	border: 1px solid #DDDDDD;
	border-radius: 50%;
	display: inline-flex;
	justify-content: center;
	align-items: center;
	margin: 0 5px;
	height: 40px;
	width: 40px;
}

footer {
    background-color: #222;
    color: #fff;
    font-size: 14px;
    bottom: 0;
    position: fixed;
    left: 0;
    right: 0;
    text-align: center;
    z-index: 999;
	margin-bottom: 0;
}

footer p {
    margin: 10px 0;
	bottom: 0;
	position: fixed;
}

footer i {
    color: red;
}

footer a {
    color: #3c97bf;
    text-decoration: none;
}

select {
	outline: 0;
	background-color: #eee;
	border-color: #FFFFFF;
	color: #333;
	border: none;
	padding: 12px 15px;
	margin: 8px 0;
	width: 100%;
} 

.label-flex {
	justify-content: space-between;
	-moz-justify-content: space-between;
	-webkit-justify-content: space-between;
	-o-justify-content: space-between;
	-ms-justify-content: space-between; }
	.label-flex label {
	  width: auto; }

.select-list {
  position: relative;
  display: inline-block;}

.image-container {
	width: 80%; /* or whatever width you want */
	height: 50%; /* or whatever height you want */
	background-color: transparent;
}
  
.image {
	width: 100%; /* Make the image take up the full width of the container */
	height: 100%; /* Make the image take up the full height of the container */
	object-fit: cover; /* Scale the image while preserving its aspect ratio to cover the entire container */
}


  /* new css for profile page */
  /* .profile-container{
	height: 90%;
	top: 10%;
	
} */

.tabcontent{
	height: 90%;
	top: 10%;
	width: 100%;

	padding-bottom: 50px;
}


.nav-tabs {
    display: flex;
	height: 10%;
	justify-content: space-evenly;
    padding: 10px 20px;
    background-color: #ef3417;
    background: -webkit-linear-gradient(to right, #FED18C, #ffb20f);
    background: linear-gradient(to right, #FED18C, #ffb20f);
    border-radius: 10px 10px 0 0;

	flex-wrap: nowrap;
	overflow-x: auto;
	-webkit-overflow-scrolling: touch;
	scrollbar-width: none; /* For Firefox */
	-ms-overflow-style: none; /* For Internet Explorer and Edge */
}

.nav-tabs::-webkit-scrollbar {
	display: none; /* For Chrome, Safari, and Opera */
  }
/* ... */

